# Accelerated-Computing-Playground

./: .gitignore  README.md
p01/: .gitignore  CMakeLists.txt  README.md  build.sh  run.sh
p01/_output/: performance_data.csv
p01/src/: CMakeLists.txt  main.cpp  plot.py
p02/: README.md  build.sh  output_data.csv  plot.py  run.sh  test  test.sh
p02/src/: main.cpp  serial.cpp
p03/: README.md  output.csv  plot.py  test.sh
p03/src/: CMakeLists.txt  main.cpp
p04/: CMakeLists.txt  Dockerfile  README.md  build.sh  plot.py  sample_gpu.cpp  test.py  test.sh
p04/src/: CMakeLists.txt  main.cpp
p05/: README.md  build.sh  data  data1  data18  data19  data20  data_no_thrust_1  data_no_thrust_2  data_no_thrust_3  data_thrust_1  data_thrust_2  data_thrust_3  main.cu  main_thrust.cu  plot.py  save_plots.sh  test.sh
p06/: README.md  build.sh  main.cu  plot.py  test.sh
p07/: CMakeLists.txt  README.md  build.sh  peppers.out  plot.py  setup_vcpkg.sh  vcpkg-configuration.json  vcpkg.json
p07/src/: main.cu
